--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         run: npx tsc --noEmit
 
       - name: Lint (vite lint)
-        run: npx vite lint
+        run: npm vite lint
 
       - name: Build (vite build)
         run: npx vite build
